--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
       <version>3.8.1</version>
       <!--<scope>test</scope>-->
     </dependency>
+
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.0-801.jdbc4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
