--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=${PORT:5000}
+
+spring:
+    datasource:
+        url: ${JDBC_DATABASE_URL}
+        username: ${JDBC_DATABASE_USERNAME}
+        password: ${JDBC_DATABASE_PASSWORD}
+        hikari.connection-timeout=30000
+        hikari.maximum-pool-size=10
+
+#spring.datasource.hikari.connection-timeout=30000
+#spring.datasource.hikari.maximum-pool-size=10
